--- a/app/src/assets/less/message.less
+++ b/app/src/assets/less/message.less
@@ -64,6 +64,7 @@
 		max-width: 90%;
 		text-align: center;
 		border-radius: 0.04rem;
+		box-sizing: border-box;
 		padding: 0.05rem 0.4rem;
 	}
 	.glob-message-close {
@@ -71,5 +72,26 @@
 		right: 0.1rem;
 		top: 0.1rem;
 		cursor: pointer;
+	}
+	.glob-message-load {
+		width: 6rem;
+		background: #0a0a0a;
+		max-width: 90%;
+		color: #fff;
+		text-align: center;
+		border-radius: 0.04rem;
+		padding: 0.05rem 0.4rem;
+		box-sizing: border-box;
+		border: 2px solid #1e1e1e;
+	}
+	.loadimg {
+		width: 0.75rem;
+		height: 0.75rem;
+		margin: 0.5rem 0 0.3rem 0;
+	}
+	.loading-text {
+		color: #cecece;
+		font-size: 0.16rem;
+		height: 0.7rem;
 	}
 }
