--- a/app/src/components/menu/index.less
+++ b/app/src/components/menu/index.less
@@ -2,8 +2,9 @@
 	height: 100%;
 	width: 2.24rem;
 	overflow: scroll;
-	background: #2e2e4c;
+	background: #0b0b0b;
 	position: relative;
+	border-right: 1px solid #242424;
 	.title {
 		margin-top: 0.93rem;
 		line-height: 0.34rem;
@@ -11,6 +12,9 @@
 		font-size: 0.28rem;
 		text-align: center;
 		font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+		.topimg {
+			width: 1.43rem;
+		}
 	}
 	.user-logo {
 		display: block;
@@ -46,15 +50,13 @@
 					content: "";
 					width: 0.06rem;
 					height: 100%;
-					background: #44cb82;
 					position: absolute;
 					left: 0;
 					top: 0;
 				}
-				color: #44cb82;
-				background: linear-gradient(to right, #32324e, #3b3b55);
+				color: #fff;
 				a {
-					color: #44cb82;
+					color: #fff;
 				}
 				.childMenu {
 					opacity: 1;
