--- a/app/src/components/sendbtn/index.less
+++ b/app/src/components/sendbtn/index.less
@@ -5,7 +5,8 @@
 	border-radius: 0.1rem;
 	cursor: pointer;
 	overflow: hidden;
+	color: #eb6106;
 	.disabled {
-		background: #c9c6c6;
+		color: #a4a4a4;
 	}
 }
