--- a/app/src/entries/addasset/components/root/index.less
+++ b/app/src/entries/addasset/components/root/index.less
@@ -4,7 +4,7 @@
 			text-align: center;
 			font-size: 0.3rem;
 			line-height: 0.36rem;
-			color: #47d184;
+			color: #4a4a4a;
 			margin-top: 0.4rem;
 		}
 		.cokBox {
@@ -12,9 +12,11 @@
 			margin-top: 0.56rem;
 			width: 7.76rem;
 			height: 5.32rem;
-			background: rgba(46, 46, 76, 1);
+			background: #0b0b0b;
 			border-radius: 8px;
 			overflow: hidden;
+			box-sizing: border-box;
+			border: 3px solid #1e1e1e;
 			.assetUl {
 				width: 7.36rem;
 				height: 4.2rem;
@@ -26,7 +28,7 @@
 					position: relative;
 					width: 100%;
 					height: 0.54rem;
-					border-bottom: 2px solid #373755;
+					border-bottom: 1px solid #1b1b23;
 					display: flex;
 					align-items: center;
 					.imgbox {
