--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -191,7 +191,7 @@ button {
 html,
 body {
 	height: 100%;
-	background: #20203b;
+	background: #181818;
 }
 // .backBtn {
 // 	position: absolute;
@@ -337,27 +337,81 @@ body {
 //交易
 //按钮
 .button-green {
-	background: linear-gradient(to right, #538376, #3c7965);
 	width: 2rem;
 	height: 0.44rem;
-	border-radius: 0.08rem;
-	line-height: 0.44rem;
+	border-radius: 0.04rem;
+	line-height: 0.42rem;
 	text-align: center;
 	display: inline-block;
-	font-size: 0.18rem;
+	font-size: 0.16rem;
 	color: #fff;
 	cursor: pointer;
 	box-sizing: border-box;
+	border: 1px solid #11e763;
+	transition: all 0.3s linear;
+	background: #00280f;
 	&:hover {
-		background: linear-gradient(to right, #82e0ac, #47c47f);
+		background: #008332;
+	}
+}
+.button-green1 {
+	width: 2rem;
+	height: 0.44rem;
+	border-radius: 0.04rem;
+	line-height: 0.42rem;
+	text-align: center;
+	display: inline-block;
+	font-size: 0.16rem;
+	color: #fff;
+	cursor: pointer;
+	box-sizing: border-box;
+	border: 1px solid #0e7937;
+	transition: all 0.3s linear;
+	background: #008332;
+}
+.button-blue {
+	background: #2f507e;
+	width: 2rem;
+	height: 0.44rem;
+	border-radius: 0.04rem;
+	line-height: 0.42rem;
+	text-align: center;
+	display: inline-block;
+	font-size: 0.16rem;
+	color: #fff;
+	cursor: pointer;
+	box-sizing: border-box;
+	border: 1px solid #5799f5;
+	transition: all 0.3s linear;
+	&:hover {
+		background: #5799f5;
+	}
+}
+
+.button-black {
+	background: #323232;
+	width: 2rem;
+	height: 0.44rem;
+	border-radius: 0.04rem;
+	line-height: 0.42rem;
+	text-align: center;
+	display: inline-block;
+	font-size: 0.16rem;
+	color: #fff;
+	cursor: pointer;
+	box-sizing: border-box;
+	border: 1px solid #9b9b9b;
+	transition: all 0.3s linear;
+	&:hover {
+		background: #0d0d0d;
 	}
 }
 .button-default {
 	background: #fff;
 	width: 2rem;
 	height: 0.44rem;
-	border-radius: 0.08rem;
-	line-height: 0.44rem;
+	border-radius: 0.04rem;
+	line-height: 0.42rem;
 	text-align: center;
 	display: inline-block;
 	font-size: 0.18rem;
@@ -367,11 +421,25 @@ body {
 	box-sizing: border-box;
 }
 .button-disabled {
-	background: #fff;
+	background: #323232;
 	width: 2rem;
 	height: 0.44rem;
-	border-radius: 0.08rem;
-	line-height: 0.44rem;
+	border-radius: 0.04rem;
+	line-height: 0.42rem;
+	text-align: center;
+	display: inline-block;
+	font-size: 0.18rem;
+	color: #a4a4a4;
+	cursor: pointer;
+	border: 1px solid #9b9b9b;
+	box-sizing: border-box;
+}
+.button-disabled1 {
+	background: #ffffff;
+	width: 2rem;
+	height: 0.44rem;
+	border-radius: 0.04rem;
+	line-height: 0.42rem;
 	text-align: center;
 	display: inline-block;
 	font-size: 0.18rem;
