--- a/app/src/entries/watchmanagewallet/components/root/index.less
+++ b/app/src/entries/watchmanagewallet/components/root/index.less
@@ -4,14 +4,14 @@
 			text-align: center;
 			font-size: 0.3rem;
 			line-height: 0.36rem;
-			color: #47d184;
+			color: #4a4a4a;
 			margin-top: 0.4rem;
 		}
 		.title2 {
 			text-align: center;
 			font-size: 0.16rem;
 			line-height: 0.19rem;
-			color: #37c175;
+			color: #4a4a4a;
 			margin-top: 0.2rem;
 		}
 		.hotarea-box {
@@ -24,19 +24,41 @@
 				width: 2.4rem;
 				height: 1.6rem;
 				border-radius: 0.08rem;
-				background: #2e2e4c;
-				&:hover {
-					background: linear-gradient(to bottom, #525275, #262642);
-				}
-				&.inMnemonic {
-					height: auto;
-				}
+				background: #0b0b0b;
+				box-sizing: border-box;
+				border: 3px solid #0b0b0b;
+				transition: all 0.3s linear;
 				cursor: pointer;
-				.imgbox {
+				&:hover {
+					border: 3px solid #1e1e1e;
+					.memoico {
+						background-image: url("../../../../assets/images/mnemonic_ico.png");
+					}
+					.keyico {
+						background-image: url("../../../../assets/images/key.png");
+					}
+					.deleteico {
+						background-image: url("../../../../assets/images/delete.png");
+					}
+					.name {
+						color: #fff;
+					}
+				}
+				.memoico {
+					background-image: url("../../../../assets/images/mnemonic_ico_s.png");
+				}
+				.keyico {
+					background-image: url("../../../../assets/images/key_s.png");
+				}
+				.deleteico {
+					background-image: url("../../../../assets/images/delete_s.png");
+				}
+				.icon-box {
 					width: 0.47rem;
 					height: 0.47rem;
 					margin: 0 auto;
 					margin-top: 0.37rem;
+					background-size: 100% 100% !important;
 				}
 				.name {
 					text-align: center;
@@ -46,49 +68,51 @@
 					line-height: 0.22rem;
 					box-sizing: border-box;
 					padding: 0 0.2rem;
+					color: #4a4a4a;
+					transition: all 0.3s linear;
 				}
-				.hideBox {
-					input {
-						display: block;
-						border: 0;
-						outline: none;
-						margin: 0 auto;
-						margin-top: 0.3rem;
-						width: 2.16rem;
-						height: 0.4rem;
-						border-radius: 0.35rem;
-						background: rgba(0, 0, 0, 0.17);
-						line-height: 0.4rem;
-						text-align: center;
-						color: #fff;
-						&::-webkit-input-placeholder {
-							color: rgba(255, 255, 255, 0.17);
-						}
-					}
-					.btnBox {
-						margin-top: 0.2rem;
-						margin-bottom: 0.37rem;
-						height: 0.3rem;
-						display: flex;
-						justify-content: center;
-						button {
-							width: 0.7rem;
-							height: 0.3rem;
-							margin: 0 0.18rem;
-							border-radius: 0.08rem;
-							color: #fff;
-						}
-						.cancel {
-							background: #dedede;
-						}
-						.comfirm {
-							background: linear-gradient(
-								rgba(130, 224, 172, 1),
-								rgba(71, 196, 127, 1)
-							);
-						}
-					}
-				}
+				// .hideBox {
+				// 	input {
+				// 		display: block;
+				// 		border: 0;
+				// 		outline: none;
+				// 		margin: 0 auto;
+				// 		margin-top: 0.3rem;
+				// 		width: 2.16rem;
+				// 		height: 0.4rem;
+				// 		border-radius: 0.35rem;
+				// 		background: rgba(0, 0, 0, 0.17);
+				// 		line-height: 0.4rem;
+				// 		text-align: center;
+				// 		color: #fff;
+				// 		&::-webkit-input-placeholder {
+				// 			color: rgba(255, 255, 255, 0.17);
+				// 		}
+				// 	}
+				// 	.btnBox {
+				// 		margin-top: 0.2rem;
+				// 		margin-bottom: 0.37rem;
+				// 		height: 0.3rem;
+				// 		display: flex;
+				// 		justify-content: center;
+				// 		button {
+				// 			width: 0.7rem;
+				// 			height: 0.3rem;
+				// 			margin: 0 0.18rem;
+				// 			border-radius: 0.08rem;
+				// 			color: #fff;
+				// 		}
+				// 		.cancel {
+				// 			background: #dedede;
+				// 		}
+				// 		.comfirm {
+				// 			background: linear-gradient(
+				// 				rgba(130, 224, 172, 1),
+				// 				rgba(71, 196, 127, 1)
+				// 			);
+				// 		}
+				// 	}
+				// }
 			}
 		}
 	}
