--- a/app/src/entries/createwallet/components/root/index.less
+++ b/app/src/entries/createwallet/components/root/index.less
@@ -28,9 +28,7 @@
 						background-image: url("../../../../assets/images/project_icon_neo.png");
 					}
 				}
-				.create-face {
-					border: 3px solid #1e1e1e;
-				}
+
 				.t1 {
 					color: #fff;
 				}
@@ -79,6 +77,11 @@
 				background: #0b0b0b;
 				box-sizing: border-box;
 				border: 3px solid #0b0b0b;
+				border-radius: 0.04rem;
+				transition: all 0.3s linear;
+				&:hover {
+					border: 3px solid #1e1e1e;
+				}
 			}
 			.create-back {
 				position: absolute;
