--- a/app/src/entries/mnemonic/components/root/index.less
+++ b/app/src/entries/mnemonic/components/root/index.less
@@ -4,7 +4,7 @@
 			text-align: center;
 			font-size: 0.3rem;
 			line-height: 0.36rem;
-			color: #47d184;
+			color: #4a4a4a;
 			margin-top: 0.4rem;
 		}
 		.cokBox {
@@ -12,9 +12,11 @@
 			margin-top: 0.56rem;
 			width: 7.76rem;
 			height: auto !important;
-			background: rgba(46, 46, 76, 1);
+			background: #0b0b0b;
 			border-radius: 8px;
 			overflow: hidden;
+			box-sizing: border-box;
+			border: 3px solid #1e1e1e;
 			.titleImg {
 				width: 0.3rem;
 				height: 0.4rem;
@@ -27,7 +29,7 @@
 				margin-bottom: 0.2rem;
 				width: 7.32rem;
 				height: 2.26rem;
-				background: rgba(0, 0, 0, 0.17);
+				background: #121212;
 				border-radius: 8px;
 				.wordUl {
 					height: 100%;
@@ -50,7 +52,7 @@
 			.mess {
 				margin-bottom: 0.1rem;
 				padding-left: 0.2rem;
-				color: rgba(255, 255, 255, 0.5);
+				color: #828282;
 				font-size: 0.12rem;
 				line-height: 0.15rem;
 			}
@@ -71,7 +73,7 @@
 				margin-top: 0.26rem;
 				width: 7.32rem;
 				.q2title {
-					color: #fff;
+					color: #828282;
 					text-align: center;
 				}
 				.helpList {
@@ -87,11 +89,7 @@
 						padding: 0 0.1rem;
 						margin: 0.18rem 0.2rem 0 0;
 						color: #fff;
-						background: linear-gradient(
-							to bottom,
-							#f0774e,
-							#e63f03
-						);
+						background: #0e7937;
 						border-radius: 8px;
 						cursor: pointer;
 					}
