--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -255,6 +255,11 @@
 			display: inline-block;
 			border-radius: 0.08rem;
 			background: #fff;
+			transform: translateY(-0.2rem);
+			transition: all 0.3s linear;
+			&.show {
+				transform: translateY(0);
+			}
 		}
 		.btn-box {
 			padding: 0.5rem 0;
