--- a/app/src/entries/addasset/components/root/index.less
+++ b/app/src/entries/addasset/components/root/index.less
@@ -18,12 +18,12 @@
 			box-sizing: border-box;
 			border: 3px solid #1e1e1e;
 			.assetUl {
-				width: 7.36rem;
+				padding: 0 0.2rem;
 				height: 4.2rem;
-				margin: 0 auto;
 				margin-top: 0.2rem;
 				overflow: scroll;
 				margin-bottom: 0.2rem;
+				position: relative;
 				.assetCell {
 					position: relative;
 					width: 100%;
@@ -44,7 +44,7 @@
 					}
 					.choose {
 						position: absolute;
-						right: 0;
+						right: 0.1rem;
 						top: 50%;
 						transform: translateY(-50%);
 						width: 0.22rem;
