--- a/app/src/entries/keystore/components/root/index.less
+++ b/app/src/entries/keystore/components/root/index.less
@@ -4,7 +4,7 @@
 			text-align: center;
 			font-size: 0.3rem;
 			line-height: 0.36rem;
-			color: #47d184;
+			color: #4a4a4a;
 			margin-top: 0.4rem;
 		}
 		.cokBox {
@@ -12,9 +12,11 @@
 			margin-top: 0.56rem;
 			width: 7.76rem;
 			height: 5.32rem;
-			background: rgba(46, 46, 76, 1);
+			background: #121212;
 			border-radius: 8px;
 			overflow: hidden;
+			box-sizing: border-box;
+			border: 3px solid #1e1e1e;
 			.titleImg {
 				width: 1.5rem;
 				height: 1.5rem;
@@ -29,7 +31,7 @@
 				margin-top: 0.26rem;
 				width: 7.16rem;
 				height: 2.06rem;
-				background: rgba(0, 0, 0, 0.17);
+				background: #282828;
 				border-radius: 8px;
 				box-sizing: border-box;
 				padding: 0.2rem 0.18rem;
@@ -49,16 +51,41 @@
 					height: 0.4rem;
 					margin: 0 0.53rem;
 					cursor: pointer;
+					&:hover {
+						p {
+							color: #fff;
+						}
+						.icon {
+							&.file {
+								background-image: url("../../../../assets/images/file_ico_s.png");
+							}
+							&.copy {
+								background-image: url("../../../../assets/images/copy_ico_s.png");
+							}
+						}
+					}
+					.icon {
+						width: 0.4rem;
+						height: 0.4rem;
+						background-size: 100% 100%;
+						&.file {
+							background-image: url("../../../../assets/images/file_ico_s1.png");
+						}
+						&.copy {
+							background-image: url("../../../../assets/images/copy_ico_s1.png");
+						}
+					}
 					p {
+						color: #828282;
 						position: absolute;
 						left: 50%;
 						bottom: -0.23rem;
 						width: 0.9rem;
 						text-align: center;
-						color: #fff;
 						font-size: 0.14rem;
 						line-height: 0.17rem;
 						transform: translateX(-50%);
+						transition: all 0.3s linear;
 					}
 				}
 			}
