--- a/app/src/entries/orderlist/components/root/index.less
+++ b/app/src/entries/orderlist/components/root/index.less
@@ -39,8 +39,9 @@
 		color: #828282;
 		box-sizing: border-box;
 		border: 3px solid #1e1e1e;
+		padding: 0 0.2rem;
 		.list-group {
-			border-bottom: 1px solid #37374a;
+			border-bottom: 1px solid #1b1b23;
 			&.show {
 				background: #121212;
 			}
@@ -51,6 +52,10 @@
 				&:hover {
 					color: #5c89eb;
 				}
+			}
+			.line1 {
+				border-bottom: 1px solid #06060a;
+				margin-bottom: 1px;
 			}
 		}
 
