--- a/app/src/entries/project/components/root/index.less
+++ b/app/src/entries/project/components/root/index.less
@@ -12,7 +12,7 @@
 			text-align: center;
 			font-weight: bold;
 			overflow: hidden;
-			transition: height 0.5s linear;
+			transition: height 1s ease-in-out;
 			height: 1rem;
 			box-sizing: border-box;
 			&.hide {
@@ -46,7 +46,7 @@
 				border-bottom: 2px solid #015a23;
 				outline: none;
 				background: transparent;
-				transition: all 0.3s linear;
+				transition: all 0.6s linear;
 				&:focus {
 					border-bottom: 2px solid #11e763;
 				}
@@ -89,14 +89,9 @@
 		}
 		.search-list {
 			width: 5.22rem;
-			position: absolute;
-			top: 2.2rem;
-			bottom: 0.1rem;
+			position: relative;
 			overflow: auto;
-			transition: top 0.3s linear;
-			&.focus {
-				top: 1.6rem;
-			}
+			transition: top 1s ease-in-out;
 			.search-list-ul {
 				.search-cell {
 					width: 5.22rem;
@@ -107,6 +102,7 @@
 					box-sizing: border-box;
 					display: flex;
 					align-items: center;
+					cursor: pointer;
 					.imgbox {
 						width: 0.43rem;
 						height: 0.43rem;
@@ -117,7 +113,6 @@
 					}
 					.messBox {
 						margin-left: 0.2rem;
-						height: 0.43rem;
 						color: #fff;
 						display: flex;
 						flex-direction: column;
