--- a/app/src/components/headernav/index.less
+++ b/app/src/components/headernav/index.less
@@ -5,7 +5,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border: 1px solid #2e2e4c;
+	// border: 1px solid #2e2e4c;
 	box-sizing: border-box;
 	.left {
 		width: 2rem;
