--- a/app/src/entries/createwallet/components/root/index.less
+++ b/app/src/entries/createwallet/components/root/index.less
@@ -3,10 +3,11 @@
 	height: 100%;
 	.create-title {
 		font-size: 0.3rem;
-		color: #47d184;
+		color: #4a4a4a;
 		text-align: center;
 		padding: 0.4rem 0 0.81rem 0;
 		box-sizing: border-box;
+		font-weight: 400;
 	}
 	.create-container {
 		display: flex;
@@ -59,7 +60,6 @@
 			.t1 {
 				margin-top: 0.3rem;
 				font-size: 0.18rem;
-				font-weight: 400;
 			}
 			.back-img {
 				text-align: center;
