--- a/app/src/entries/gas/components/root/index.less
+++ b/app/src/entries/gas/components/root/index.less
@@ -29,6 +29,9 @@
 				border: 3px solid #121212;
 				&:hover {
 					border: 3px solid #1e1e1e;
+					.gastitle {
+						color: #fff;
+					}
 				}
 				&.frozen {
 					height: 2.66rem;
@@ -38,10 +41,12 @@
 					font-size: 0.16rem;
 					line-height: 0.19rem;
 					text-align: center;
+					color: #828282;
+					transition: all 0.3s ease-in-out;
 				}
 				.money {
 					margin-top: 0.1rem;
-					font-size: 0.24rem;
+					font-size: 0.3rem;
 					line-height: 0.48rem;
 					overflow: hidden;
 					text-overflow: ellipsis;
