--- a/app/src/entries/importwallet/components/root/index.less
+++ b/app/src/entries/importwallet/components/root/index.less
@@ -2,8 +2,9 @@
 	.import-title {
 		padding: 0.4rem 0;
 		font-size: 0.3rem;
-		color: #47d184;
+		color: #4a4a4a;
 		text-align: center;
+		font-weight: 400;
 	}
 	.wallet-type {
 		display: flex;
@@ -57,7 +58,6 @@
 				transition: all 0.3s linear;
 				font-size: 0.18rem;
 				margin-top: 0.2rem;
-				font-weight: 400;
 				color: #828282;
 			}
 		}
