--- a/app/src/assets/less/common.less
+++ b/app/src/assets/less/common.less
@@ -350,6 +350,7 @@ body {
 	border: 1px solid #11e763;
 	transition: all 0.3s linear;
 	background: #00280f;
+	font-weight: 200;
 	&:hover {
 		background: #008332;
 	}
@@ -368,6 +369,7 @@ body {
 	border: 1px solid #0e7937;
 	transition: all 0.3s linear;
 	background: #008332;
+	font-weight: 200;
 }
 .button-blue {
 	background: #2f507e;
@@ -383,6 +385,7 @@ body {
 	box-sizing: border-box;
 	border: 1px solid #5799f5;
 	transition: all 0.3s linear;
+	font-weight: 200;
 	&:hover {
 		background: #5799f5;
 	}
@@ -402,6 +405,7 @@ body {
 	box-sizing: border-box;
 	border: 1px solid #9b9b9b;
 	transition: all 0.3s linear;
+	font-weight: 200;
 	&:hover {
 		background: #0d0d0d;
 	}
@@ -419,6 +423,7 @@ body {
 	cursor: pointer;
 	border: 1px solid #c9c6c6;
 	box-sizing: border-box;
+	font-weight: 200;
 }
 .button-disabled {
 	background: #323232;
@@ -433,6 +438,7 @@ body {
 	cursor: pointer;
 	border: 1px solid #9b9b9b;
 	box-sizing: border-box;
+	font-weight: 200;
 }
 .button-disabled1 {
 	background: #ffffff;
@@ -447,6 +453,7 @@ body {
 	cursor: pointer;
 	border: 1px solid #c9c6c6;
 	box-sizing: border-box;
+	font-weight: 200;
 }
 .line-orange {
 	background: linear-gradient(to right, #f0764d, #e63f03);
