--- a/app/src/entries/createwallet/components/root/index.less
+++ b/app/src/entries/createwallet/components/root/index.less
@@ -9,6 +9,15 @@
 		box-sizing: border-box;
 		font-weight: 400;
 	}
+	.warn {
+		position: absolute;
+		color: #828282;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		text-align: center;
+		padding-bottom: 0.1rem;
+	}
 	.create-container {
 		display: flex;
 		justify-content: center;
