--- a/app/src/entries/ethwallet/components/root/index.less
+++ b/app/src/entries/ethwallet/components/root/index.less
@@ -6,13 +6,14 @@
 	.box1 {
 		padding: 0.4rem 0;
 		.backup {
-			color: #ff7044;
-			padding: 0.05rem 0.15rem;
-			border: 1px solid #ff7044;
-			border-radius: 0.04rem;
-			font-size: 0.14rem;
+			color: #5c89eb;
 			vertical-align: middle;
-			margin-left: 0.2rem;
+			padding: 0.03rem 0.1rem;
+			border-radius: 0.04rem;
+			border: 1px solid #5c89eb;
+			margin-left: 0.1rem;
+			font-size: 0.12rem;
+			font-weight: 200;
 		}
 		.icon-box {
 			width: 0.8rem;
@@ -43,7 +44,9 @@
 			font-size: 0.24rem;
 		}
 		.name {
-			font-size: 0.3rem;
+			font-size: 0.24rem;
+			position: relative;
+			top: 0.01rem;
 			color: #fff;
 		}
 		.address {
@@ -68,6 +71,7 @@
 			font-size: 0.18rem;
 			color: #828282;
 			cursor: pointer;
+			font-weight: 200;
 			&.cur {
 				color: #47d184;
 			}
