--- a/app/src/entries/orderlist/components/root/index.less
+++ b/app/src/entries/orderlist/components/root/index.less
@@ -64,11 +64,11 @@
 			box-sizing: border-box;
 		}
 		.state {
-			width: 1.3rem;
+			width: 1.1rem;
 			color: #47d184;
 		}
 		.time {
-			width: 2rem;
+			width: 1.6rem;
 			text-align: center;
 		}
 		.f1 {
@@ -82,10 +82,11 @@
 			text-align: right;
 		}
 		.arrow {
-			width: 0.15rem;
-			height: 0.15rem;
+			width: 0.1rem;
+			height: 0.1rem;
 			position: relative;
 			cursor: pointer;
+			transform-origin: 50% 50%;
 			&:before {
 				content: "";
 				position: absolute;
@@ -104,7 +105,7 @@
 			top: 0.08rem;
 		}
 		.list-more {
-			padding: 0 0.5rem 0 1.44rem;
+			padding: 0 0.5rem 0 1.25rem;
 			display: flex;
 			flex-flow: wrap;
 			transition: height 0.2s linear;
