--- a/app/src/entries/project/components/root/index.less
+++ b/app/src/entries/project/components/root/index.less
@@ -98,7 +98,7 @@
 					height: 0.67rem;
 					display: flex;
 					align-items: center;
-					border-bottom: 1px solid #17172e;
+					// border-bottom: 1px solid #17172e;
 					box-sizing: border-box;
 					display: flex;
 					align-items: center;
@@ -129,6 +129,7 @@
 							overflow: hidden;
 							text-overflow: ellipsis;
 							white-space: nowrap;
+							color: #4a4a4a;
 						}
 					}
 				}
