--- a/app/src/entries/wallet/components/root/index.less
+++ b/app/src/entries/wallet/components/root/index.less
@@ -6,6 +6,7 @@
 		color: #4a4a4a;
 		font-size: 0.36rem;
 		padding: 0.4rem 0 0.34rem 0;
+		font-weight: 400;
 	}
 	.wallet-ctrl {
 		box-sizing: border-box;
