--- a/app/src/components/headernav/index.less
+++ b/app/src/components/headernav/index.less
@@ -16,18 +16,33 @@
 			height: 0.18rem;
 			width: 0.12rem;
 			cursor: pointer;
+			background-image: url("../../assets/images/zuo_ico.png");
+			background-size: 100% 100%;
+			&:hover {
+				background-image: url("../../assets/images/zuo_ico_s.png");
+			}
 		}
 		.btn-prev {
 			margin-left: 0.3rem;
 			height: 0.18rem;
 			width: 0.12rem;
 			cursor: pointer;
+			background-image: url("../../assets/images/you_ico.png");
+			background-size: 100% 100%;
+			&:hover {
+				background-image: url("../../assets/images/you_ico_s.png");
+			}
 		}
 		.btn-home {
 			margin-left: 0.5rem;
 			width: 0.2rem;
 			height: 0.18rem;
 			cursor: pointer;
+			background-image: url("../../assets/images/zhuye_ico_s.png");
+			background-size: 100% 100%;
+			&:hover {
+				background-image: url("../../assets/images/zhuye_ico.png");
+			}
 		}
 	}
 	.right {
@@ -40,6 +55,11 @@
 			width: 0.18rem;
 			height: 0.18rem;
 			cursor: pointer;
+			background-image: url("../../assets/images/shuaxin_ico_s.png");
+			background-size: 100% 100%;
+			&:hover {
+				background-image: url("../../assets/images/shuaxin_ico.png");
+			}
 		}
 	}
 }
