--- a/app/src/entries/watchwallet/components/root/index.less
+++ b/app/src/entries/watchwallet/components/root/index.less
@@ -34,7 +34,7 @@
 			font-size: 0.24rem;
 		}
 		.name {
-			font-size: 0.3rem;
+			font-size: 0.24rem;
 			color: #fff;
 			vertical-align: middle;
 		}
@@ -47,13 +47,14 @@
 			white-space: nowrap;
 		}
 		.watch {
-			color: #47d184;
-			font-size: 0.14rem;
+			color: #eb6106;
+			vertical-align: middle;
 			padding: 0.03rem 0.1rem;
 			border-radius: 0.04rem;
-			border: 1px solid #47d184;
+			border: 1px solid #eb6106;
 			margin-left: 0.1rem;
-			vertical-align: middle;
+			font-size: 0.12rem;
+			font-weight: 200;
 		}
 	}
 	.box2 {
@@ -69,6 +70,7 @@
 			font-size: 0.18rem;
 			color: #828282;
 			cursor: pointer;
+			font-weight: 200;
 			&.cur {
 				color: #47d184;
 			}
